corrigo query conectar. agrego test para conectar y caminoMasCorto